--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "congruence"
+name = "quadratic_congruence_solver"
 version = "0.1.0"
 authors = ["elmo moilanen"]
 edition = "2018"
