--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "quadratic_congruence_solver"
-version = "1.1.0"
+description = "Solver for quadratic and linear congruence equations."
+keywords = ["modular-arithmetic", "congruence", "linear-equations", "quadratic-equations"]
+license = "GPL-3.0"
+version = "1.2.0"
 
 [profile.dev]
 opt-level = 0
